objects/amazonconnect__AWS_PhoneCallEvent__c.object
<CustomObject>
    <description>Amazon Connect Phone Call Event</description>
    <fields>
        <fullName>amazonconnect__ContactId__c</fullName>
        <label>Contact Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__End__c</fullName>
        <label>End</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__FormattedTranscript__c</fullName>
        <label>Formatted Transcript</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Real</fullName>
                </value>
                <value>
                    <fullName>Post</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Transcribe Post</fullName>
                    <isActive>false</isActive>
                    <label>Transcribe Post</label>
                </value>
                <value>
                    <fullName>Transcribe Real</fullName>
                    <isActive>false</isActive>
                    <label>Transcribe Real</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__PhoneCall__c</fullName>
        <label>Phone Call</label>
        <referenceTo>amazonconnect__AWS_PhoneCall__c</referenceTo>
        <relationshipLabel>Phone Call Events</relationshipLabel>
        <relationshipName>PhoneCall_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amazonconnect__RawTranscript__c</fullName>
        <label>Raw Transcript</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__RegionColor__c</fullName>
        <formula>CASE(
        amazonconnect__Type__c ,
        &apos;AgentJoin&apos;, &apos;hsla(132, 100%, 50%, 0.5)&apos;,
        &apos;CustomerJoin&apos;, &apos;hsla(132, 100%, 50%, 0.5)&apos;,
        &apos;Leave&apos;, &apos;hsla(7, 100%, 65%, 0.5)&apos;,
        &apos;Speech&apos;,
        CASE(amazonconnect__SpokenBy__c, &apos;Agent&apos;, &apos;hsla(200, 50%, 70%, 0.5)&apos;, &apos;hsla(193, 0%, 70%, 0.5)&apos;)
        ,
        &apos;hsla(329, 50%, 70%, 0.4)&apos;
        )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__SentimentLabel__c</fullName>
        <label>Sentiment Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__SentimentScore__c</fullName>
        <label>Sentiment Score</label>
        <precision>17</precision>
        <scale>16</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__SpokenBy__c</fullName>
        <label>Spoken By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__Start__c</fullName>
        <label>Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Speech</fullName>
                </value>
                <value>
                    <fullName>Notes</fullName>
                </value>
                <value>
                    <fullName>OnHold</fullName>
                    <label>On Hold</label>
                </value>
                <value>
                    <fullName>OffHold</fullName>
                    <label>Off Hold</label>
                </value>
                <value>
                    <fullName>AgentJoin</fullName>
                    <label>Agent Join</label>
                </value>
                <value>
                    <fullName>AgentLeave</fullName>
                    <label>Agent Leave</label>
                </value>
                <value>
                    <fullName>CustomerJoin</fullName>
                    <label>Customer Join</label>
                </value>
                <value>
                    <fullName>CustomerLeave</fullName>
                    <label>Customer Leave</label>
                </value>
                <value>
                    <fullName>Off-Hold</fullName>
                    <isActive>false</isActive>
                    <label>Off-Hold</label>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                    <isActive>false</isActive>
                    <label>On-Hold</label>
                </value>
                <value>
                    <fullName>Post</fullName>
                    <isActive>false</isActive>
                    <label>Post</label>
                </value>
                <value>
                    <fullName>Real</fullName>
                    <isActive>false</isActive>
                    <label>Real</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AWS Phone Call Event</label>
    <nameField>
        <label>AWS Phone Call Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AWS Phone Call Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>